2004-07-07  Alfred Peng <alfred.peng@sun.com>

	Fix for bugzilla BUG #59196.

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in:
	Replace "Unknown" with "Exchange" in View->Window submenu.

2004-07-05  Nicel KM  <mnicel@novell.com>

	* configure.in : Bump version to 1.5.90

	* po/*.po: latest .po files

2004-07-03  Nicel KM  <mnicel@novell.com>

	* storage/exchange-account.c (get_password): In case of remembering
	password, no need to save the complete account_list. Fixes an 
	evolution crash that happens on adding the exchange account with 
	remember password option checked. 

2004-07-03  Nicel KM  <mnicel@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (modify_object):
	Killed some type mismatch warnings.

2004-06-29  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-hierarchy-webdav.c (xfer_folder): Finding the
	folder type before removing the folder and also removing e-sources
	during rename/move only in case of success.
	Fixes #60685

2004-06-28  Nicel KM  <mnicel@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (remove_object):
	Handle deletions of individual occurences of a recurring event.
	In case of deleting single occurance, remove the instance from 
	the component and modify_object.

2004-06-23  Nicel KM  <mnicel@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object):
	Update the categories list with the ref for the new component.
	Removed some commented code.
	(modify_object): remove the old and add new category in the category 
	list
	(remove_object): remove ref for component from the category list


2004-06-22  Dan Winship  <danw@novell.com>

	* lib/e2k-uri.c (e2k_uri_append_encoded, e2k_uri_encode): add a
	"wss_encode" flag, saying whether or not to use the Web Storage
	System URI-encoding rules ("/" becomes "_xF8FF_", etc), since some
	places don't want them.

	* lib/e2k-context.c (e2k_context_fba): Don't put multiple &s
	between flags, and use "normal" URI encoding rules without the